fix gap and src 320 x1 for energy_flow

--- a/src/css/my-projects.css
+++ b/src/css/my-projects.css
@@ -29,7 +29,7 @@
 .project-card-description {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 16px;
 
   margin-top: 12px;
 }
@@ -44,7 +44,7 @@
 .project-info {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 16px;
 }
 
 .project-name {
@@ -147,6 +147,7 @@
 
   .project-info {
     flex-direction: row;
+    gap: 0;
   }
 
   .project-link {
@@ -166,7 +167,6 @@
   }
 
   .project-card-description {
-    gap: 20px;
     margin-top: 16px;
   }
 }
